update to latest

--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
-  "name": "quick-start",
-  "private": true,
-  "scripts": {
-    "generate": "zen generate",
-    "dev": "tsx main.ts",
-    "client": "sh ./client-test.sh",
-    "up": "npm i @zenstackhq/cli@next @zenstackhq/orm@next @zenstackhq/plugin-policy@next @zenstackhq/server@next"
-  },
-  "devDependencies": {
-    "@types/express": "^5.0.5",
-    "@types/node": "^24.1.0",
-    "@types/sql.js": "^1.4.9",
-    "@zenstackhq/cli": "^3.0.0",
-    "tsx": "^4.20.3",
-    "typescript": "^5.8.3"
-  },
-  "dependencies": {
-    "@zenstackhq/orm": "^3.0.0",
-    "@zenstackhq/plugin-policy": "^3.0.0",
-    "@zenstackhq/server": "^3.0.0",
-    "express": "^5.1.0",
-    "sql.js": "^1.13.0"
-  }
+    "name": "quick-start",
+    "private": true,
+    "scripts": {
+        "generate": "zen generate",
+        "dev": "tsx main.ts",
+        "client": "sh ./client-test.sh",
+        "up": "npm i @zenstackhq/cli@latest @zenstackhq/orm@latest @zenstackhq/plugin-policy@latest @zenstackhq/server@latest"
+    },
+    "devDependencies": {
+        "@types/express": "^5.0.5",
+        "@types/node": "^24.1.0",
+        "@types/sql.js": "^1.4.9",
+        "@zenstackhq/cli": "^3.0.0",
+        "tsx": "^4.20.3",
+        "typescript": "^5.8.3"
+    },
+    "dependencies": {
+        "@zenstackhq/orm": "^3.0.0",
+        "@zenstackhq/plugin-policy": "^3.0.0",
+        "@zenstackhq/server": "^3.0.0",
+        "express": "^5.1.0",
+        "sql.js": "^1.13.0"
+    }
 }
